[gd_scene load_steps=2 format=3 uid="uid://dx3lupwb8kn48"]

[ext_resource type="Script" uid="uid://cpja5qdnl51n3" path="res://scripts/enemy_manager.gd" id="1_sqyd6"]

[node name="EnemyManager" type="Node2D"]
script = ExtResource("1_sqyd6")

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 5.0

[node name="EnemyMove" type="Timer" parent="."]
wait_time = 2.0
